cmake_minimum_required(VERSION 3.17)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp src/Solution.cpp src/My_sort.cpp src/TreeNode.cpp src/ListNode.cpp src/Useful_function.cpp src/climbStairs.cpp src/maxProfit.cpp src/maximumSubarray.cpp src/rob.cpp src/removeDuplicates.cpp src/maxProfitII.cpp src/rotate.cpp src/reverseString.cpp src/reverseInt.cpp src/rotateArray.cpp src/isAnagram.cpp src/deleteNode.cpp src/maxDepth.cpp src/isValidBST.cpp src/levelOrder.cpp src/sortedArrayToBST.cpp src/isSymmetric.cpp src/romanToInt.cpp src/shuffleAnArray.cpp src/minStack.cpp src/firstBadVersion.cpp src/isValidParentheses.cpp src/hammingWeight.cpp src/hammingDistance.cpp src/reverseBits.cpp src/pascalTriangle.cpp src/missingNumber.cpp src/isStringPalindrome.cpp src/moveZeros.cpp src/firstUniqueChar.cpp src/intersectOfTwoArray.cpp src/isValidSudoku.cpp src/longestCommonPrefix.cpp src/countAndSay.cpp)